tests/snapshots/plot_images__grid_plots_emit_images_and_updates.snap
---
source: tests/plot_images.rs
assertion_line: 145
expression: serialized
---
{
  "steps": [
    {
      "tool": "write_stdin",
      "input": "grid::grid.newpage(); grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))",
      "response": {
        "content": [
          {
            "type": "image",
            "data": "blake3:a1906ff9561813c36a9a3662e7740159b59c81481d6142183859678cba817c41",
            "mimeType": "image/png",
            "_meta": {
              "mcpConsole": {
                "imageId": "plot-2",
                "isNewPage": true
              }
            }
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    },
    {
      "tool": "write_stdin",
      "input": "grid::grid.lines(x = c(0.1, 0.9), y = c(0.9, 0.1))",
      "response": {
        "content": [
          {
            "type": "image",
            "data": "blake3:eea45b50384ba1ebfb7e74f1ab9826400b252526a72227900d8096b214bfec08",
            "mimeType": "image/png",
            "_meta": {
              "mcpConsole": {
                "imageId": "plot-2",
                "isNewPage": false
              }
            }
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    },
    {
      "tool": "write_stdin",
      "input": "1+1",
      "response": {
        "content": [
          {
            "type": "text",
            "text": "[1] 2\n"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    }
  ]
}
