tests/snapshots/plot_images__grid_plots_emit_images_and_updates@macos.snap
---
source: tests/plot_images.rs
expression: serialized
---
{
  "steps": [
    {
      "tool": "r_repl",
      "input": "grid::grid.newpage(); grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))",
      "response": {
        "content": [
          {
            "type": "image",
            "data": "blake3:47525e6a088b368bfb44d178ec912c488125bafe7cf47165a37fa0377f2d116f",
            "mimeType": "image/png"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    },
    {
      "tool": "r_repl",
      "input": "grid::grid.lines(x = c(0.1, 0.9), y = c(0.9, 0.1))",
      "response": {
        "content": [
          {
            "type": "image",
            "data": "blake3:13144fb0a14c9e60fe21d1220af6bbf64f335854dafd4e803fe0bcb1c7fbe2ca",
            "mimeType": "image/png"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    },
    {
      "tool": "r_repl",
      "input": "1+1",
      "response": {
        "content": [
          {
            "type": "text",
            "text": "[1] 2\n"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    }
  ]
}
