tests/snapshots/plot_images__grid_plots_emit_images_and_updates@transcript.snap
---
source: tests/plot_images.rs
expression: transcript
---
== transcript ==
1) repl
>>> grid::grid.newpage(); grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))
<<< [image/png blake3:a1906ff9561813c36a9a3662e7740159b59c81481d6142183859678cba817c41]

2) repl
>>> grid::grid.lines(x = c(0.1, 0.9), y = c(0.9, 0.1))
<<< [image/png blake3:eea45b50384ba1ebfb7e74f1ab9826400b252526a72227900d8096b214bfec08]

3) repl
>>> 1+1
<<< [1] 2
<<<
