tests/snapshots/plot_images__grid_plots_emit_stable_images_for_repeats.snap
---
source: tests/plot_images.rs
expression: serialized
---
{
  "steps": [
    {
      "tool": "repl",
      "input": "grid::grid.newpage(); grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))",
      "response": {
        "content": [
          {
            "type": "image",
            "data": "blake3:a1906ff9561813c36a9a3662e7740159b59c81481d6142183859678cba817c41",
            "mimeType": "image/png",
            "_meta": {
              "mcpConsole": {
                "imageId": "plot-2",
                "isNewPage": true
              }
            }
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    },
    {
      "tool": "repl",
      "input": "grid::grid.newpage(); grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))",
      "response": {
        "content": [
          {
            "type": "image",
            "data": "blake3:a1906ff9561813c36a9a3662e7740159b59c81481d6142183859678cba817c41",
            "mimeType": "image/png",
            "_meta": {
              "mcpConsole": {
                "imageId": "plot-3",
                "isNewPage": true
              }
            }
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    },
    {
      "tool": "repl",
      "input": "1+1",
      "response": {
        "content": [
          {
            "type": "text",
            "text": "[1] 2\n"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    }
  ]
}
