tests/snapshots/plot_images__grid_plots_emit_stable_images_for_repeats@transcript.snap
---
source: tests/plot_images.rs
assertion_line: 159
expression: transcript
---
== transcript ==
1) write_stdin
>>> grid::grid.newpage(); grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))
<<< [image/png blake3:a1906ff9561813c36a9a3662e7740159b59c81481d6142183859678cba817c41]

2) write_stdin
>>> grid::grid.newpage(); grid::grid.lines(x = c(0.1, 0.9), y = c(0.1, 0.9))
<<< [image/png blake3:a1906ff9561813c36a9a3662e7740159b59c81481d6142183859678cba817c41]

3) write_stdin
>>> 1+1
<<< [1] 2
<<<
