tests/snapshots/plot_images__multi_panel_plots_emit_single_image.snap
---
source: tests/plot_images.rs
expression: serialized
---
{
  "steps": [
    {
      "tool": "r_repl",
      "input": "par(mfrow = c(2, 1)); plot(1:10); plot(10:1)",
      "response": {
        "content": [
          {
            "type": "image",
            "data": "blake3:d10529d949733ba6ce8ef0d591129e26da42a908d7e2a20bb474705b4360a6f8",
            "mimeType": "image/png"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    },
    {
      "tool": "r_repl",
      "input": "1+1",
      "response": {
        "content": [
          {
            "type": "text",
            "text": "[1] 2\n"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    }
  ]
}
