tests/snapshots/plot_images__multi_panel_plots_emit_single_image@transcript.snap
---
source: tests/plot_images.rs
assertion_line: 159
expression: transcript
---
== transcript ==
1) write_stdin
>>> par(mfrow = c(2, 1)); plot(1:10); plot(10:1)
<<< [image/png blake3:709934cb4985dce96f6d6cf437d06f422027aa525901182b6b5c3e76167d6128]

2) write_stdin
>>> 1+1
<<< [1] 2
<<<
