tests/snapshots/plot_images__plots_emit_images_and_updates@macos.snap
---
source: tests/plot_images.rs
expression: serialized
---
{
  "steps": [
    {
      "tool": "r_repl",
      "input": "plot(1:10)",
      "response": {
        "content": [
          {
            "type": "image",
            "data": "blake3:ae6672605feb09b2f26604d8439f4ca60aac78b7db4f1f6a210b44194d84af6c",
            "mimeType": "image/png"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    },
    {
      "tool": "r_repl",
      "input": "lines(4:8, 4:8)",
      "response": {
        "content": [
          {
            "type": "image",
            "data": "blake3:397871e52656cc5b0883b57c200ded44fb60ca1d264683ffb13e6bfd4e96ad85",
            "mimeType": "image/png"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    },
    {
      "tool": "r_repl",
      "input": "1+1",
      "response": {
        "content": [
          {
            "type": "text",
            "text": "[1] 2\n"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    }
  ]
}
