tests/snapshots/plot_images__plots_emit_images_and_updates@transcript.snap
---
source: tests/plot_images.rs
expression: transcript
---
== transcript ==
1) repl
>>> plot(1:10)
<<< [image/png blake3:0694aafd9f8fc0744e7029b187c1ab182d061a4f180319772a19794be32ebf98]

2) repl
>>> lines(4:8, 4:8)
<<< [image/png blake3:360038e3039ff204ea7387e588961dc5e0c2cac15c840f78a7c1c8f3e8c9a0c0]

3) repl
>>> 1+1
<<< [1] 2
<<<
